# hagato

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hagato.cabal  shell.nix
examples/chess/app/chess-glfw/: Main.hs
examples/chess/assets/: cube.glb
examples/chess/shaders/: chess.frag  chess.frag.spv  chess.vert  chess.vert.spv  cube.frag  cube.frag.spv  cube.vert  cube.vert.spv
examples/chess/src/ChessExample/: Game.hs  GameState.hs
examples/chess/src/ChessExample/Component/: Animation.hs  Camera.hs  Environment.hs  Focus.hs  Index.hs  Mesh.hs  Screen.hs  Transform.hs
examples/chess/src/ChessExample/System/: Animator.hs  Artist.hs  Asset.hs  Director.hs  Input.hs  Player.hs  Referee.hs  World.hs
examples/chess/src/ChessExample/Vulkan/: Memory.hs  Renderer.hs  Setup.hs
examples/chess/src/Effectful/: Extra.hs
src/hagato-core-effectful/Hagato/Core/: Effectful.hs
src/hagato-core-effectful/Hagato/Core/Effectful/: Log.hs
src/hagato-core/Hagato/: Core.hs
src/hagato-core/Hagato/Core/: Animation.hs  Camera.hs  Extra.hs  Input.hs  Log.hs  Loop.hs  Math.hs
src/hagato-core/Hagato/Core/Animation/: Float.hs  Vec3.hs
src/hagato-core/Hagato/Core/Math/: Mat4.hs  Plane.hs  Quaternion.hs  Ray.hs  Vec2.hs  Vec3.hs  Vec4.hs
src/hagato-glfw-effectful/Hagato/GLFW/: Effectful.hs
src/hagato-glfw-effectful/Hagato/GLFW/Effectful/: Window.hs
src/hagato-glfw/Hagato/: GLFW.hs
src/hagato-glfw/Hagato/GLFW/: Input.hs  Instance.hs  Window.hs
src/hagato-gltf-effectful/Hagato/GLTF/: Effectful.hs
src/hagato-gltf-vulkan/Hagato/GLTF/: Vulkan.hs
src/hagato-gltf/Hagato/: GLTF.hs
src/hagato-gltf/Hagato/GLTF/: Accessor.hs  Aeson.hs  Animation.hs  Asset.hs  AssetInfo.hs  Attribute.hs  Buffer.hs  BufferView.hs  Camera.hs  Chunk.hs  Exception.hs  Header.hs  Image.hs  Index.hs  Material.hs  Mesh.hs  MetallicRoughness.hs  Monad.hs  Node.hs  Sampler.hs  Scene.hs  Skin.hs  Texture.hs  TextureInfo.hs  Transmission.hs  URI.hs
src/hagato-vma-effectful/Hagato/Vulkan/Effectful/: MemoryAllocator.hs
src/hagato-vma/Hagato/Vulkan/: MemoryAllocator.hs
src/hagato-vulkan-effectful/Hagato/Vulkan/: Effectful.hs
src/hagato-vulkan-effectful/Hagato/Vulkan/Effectful/: Buffer.hs  Command.hs  CommandBuffer.hs  CommandPool.hs  DescriptorSet.hs  DescriptorSetAllocator.hs  Device.hs  Fence.hs  Frame.hs  Framebuffer.hs  Image.hs  ImageView.hs  Instance.hs  Memory.hs  Pipeline.hs  PipelineLayout.hs  RenderPass.hs  Sampler.hs  Semaphore.hs  Shader.hs  Swapchain.hs  VirtualFrame.hs  Window.hs
src/hagato-vulkan/Control/Monad/Logic/: Extra.hs
src/hagato-vulkan/Data/Bits/: Extra.hs
src/hagato-vulkan/Data/List/: Extra.hs
src/hagato-vulkan/Data/Ord/: Extra.hs
src/hagato-vulkan/Hagato/: Vulkan.hs
src/hagato-vulkan/Hagato/Vulkan/: Buffer.hs  Builder.hs  Camera.hs  Command.hs  CommandBuffer.hs  CommandPool.hs  DescriptorSet.hs  DescriptorSetAllocator.hs  Device.hs  Exception.hs  Fence.hs  Frame.hs  Framebuffer.hs  Image.hs  ImageView.hs  Instance.hs  Memory.hs  PhysicalDevice.hs  Pipeline.hs  PipelineLayout.hs  Queue.hs  RenderPass.hs  Result.hs  Sampler.hs  Semaphore.hs  Shader.hs  Swapchain.hs  Version.hs  VirtualFrame.hs  Window.hs
